<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">超级记事本</string>
    <string name="hello_world">Hello world!</string>
    <string name="tab_buttom_left">个人</string>
    <string name="tab_buttom_middle">多人</string>
    <string name="tab_buttom_right">记事本</string>
    <string name="submit">提交</string>
    <string name="input">请输入信息</string>
    <string name="delete">删除</string>
    <string name="edite">修改</string>
    <string name="solve">解决</string>
    <string name="chose">多选</string>
    <string name="title_activity_add_book">AddBookActivity</string>
    <string name="title_activity_chose">ChoseActivity</string>
    <string name="title_activity_sove">SoveActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_new_main">NewMainActivity</string>

</resources>
